Remove flex from form's inputs layout

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -32,13 +32,19 @@
         <form action="/" class="form">
           <!-- First Name -->
           <div class="form__input">
-            <input type="text" class="first-name" placeholder="First Name" />
+            <input
+              type="text"
+              class="first-name error-input"
+              placeholder="First Name"
+            />
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
-            <small class="form__errormsg">
-              <!-- error message plugged in here -->
-            </small>
+          </div>
+          <!-- Error msg -->
+          <div class="form__errormsg">
+            <!-- error message plugged in here -->
+            Enter a valid name
           </div>
 
           <!-- Last Name -->
@@ -47,10 +53,12 @@
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
-            <small class="form__errormsg">
-              <!-- error message plugged in here -->
-            </small>
           </div>
+          <!-- Error msg -->
+          <small class="form__errormsg">
+            <!-- error message plugged in here -->
+            Enter a valid name
+          </small>
 
           <!-- Email Address -->
           <div class="form__input">
@@ -58,10 +66,12 @@
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
-            <small class="form__errormsg">
-              <!-- error message plugged in here -->
-            </small>
           </div>
+          <!-- Error msg -->
+          <small class="form__errormsg">
+            <!-- error message plugged in here -->
+            Enter a valid name
+          </small>
 
           <!-- Password -->
           <div class="form__input">
@@ -69,10 +79,12 @@
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
-            <small class="form__errormsg">
-              <!-- error message plugged in here -->
-            </small>
           </div>
+          <!-- Error msg -->
+          <small class="form__errormsg">
+            <!-- error message plugged in here -->
+            Enter a valid name
+          </small>
 
           <!-- Submit btn -->
           <input
