Create displayError function and plug function in conditional to check whether input is valid or not

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -32,19 +32,14 @@
         <form action="/" class="form">
           <!-- First Name -->
           <div class="form__input">
-            <input
-              type="text"
-              class="first-name error-input"
-              placeholder="First Name"
-            />
+            <input type="text" class="first-name" placeholder="First Name" />
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
           </div>
           <!-- Error msg -->
-          <div class="form__errormsg">
+          <div class="form__errormsg error-first-name">
             <!-- error message plugged in here -->
-            Enter a valid name
           </div>
 
           <!-- Last Name -->
@@ -55,9 +50,8 @@
             </span>
           </div>
           <!-- Error msg -->
-          <small class="form__errormsg">
+          <small class="form__errormsg error-last-name">
             <!-- error message plugged in here -->
-            Enter a valid name
           </small>
 
           <!-- Email Address -->
@@ -68,9 +62,8 @@
             </span>
           </div>
           <!-- Error msg -->
-          <small class="form__errormsg">
+          <small class="form__errormsg error-email">
             <!-- error message plugged in here -->
-            Enter a valid name
           </small>
 
           <!-- Password -->
@@ -81,9 +74,8 @@
             </span>
           </div>
           <!-- Error msg -->
-          <small class="form__errormsg">
+          <small class="form__errormsg error-password">
             <!-- error message plugged in here -->
-            Enter a valid name
           </small>
 
           <!-- Submit btn -->
