Update background image source file and markdown file

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -56,7 +56,12 @@
 
           <!-- Email Address -->
           <div class="form__input">
-            <input type="text" class="email" placeholder="Email Address" />
+            <input
+              type="text"
+              name="email"
+              class="email"
+              placeholder="Email Address"
+            />
             <span class="form__icon">
               <img src="images/icon-error.svg" alt="error icon" />
             </span>
