Correct html's main element to be a section element as main elements must not appear as a descendant of a section element

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
-    <section class="container">
+    <main class="container">
       <aside class="info">
         <h1 class="info__title">Learn to code by watching others</h1>
         <p class="info__description">
@@ -24,7 +24,7 @@
         </p>
       </aside>
 
-      <main class="cta">
+      <section class="cta">
         <div class="cta__detail">
           <span class="bold">Try it free 7</span> days then $20/mo. thereafter
         </div>
@@ -95,7 +95,7 @@
             <a href="#" class="bold theme-red">Terms and Services</a>
           </small>
         </form>
-      </main>
+      </section>
 
       <footer>
         <p class="attribution">
@@ -106,6 +106,6 @@
           <a href="https://github.com/neonita" target="_blank">Neonita</a>.
         </p>
       </footer>
-    </section>
+    </main>
   </body>
 </html>
