Add h2 heading under section element (for screen readers only)

--- a/Newbie/intro-component-with-signup-form-master/index.html
+++ b/Newbie/intro-component-with-signup-form-master/index.html
@@ -29,6 +29,7 @@
           <span class="bold">Try it free 7</span> days then $20/mo. thereafter
         </div>
 
+        <h2 class="sr-only">Sign up form</h2>
         <form action="/" class="form">
           <!-- First Name -->
           <div class="form__input">
