--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -14,20 +14,21 @@
   </head>
   <body>
     <h1 class="sr-only">Advice</h1>
+
     <main class="card">
       <h5 class="card__title">advice #<span class="card__number"></span></h5>
+
       <blockquote class="card__advice">
         "<span class="card__advice-generated"></span>"
       </blockquote>
-      <img
-        src="images/pattern-divider-desktop.svg"
-        alt="divider"
-        class="card__divider"
-      />
-      <button type="submit">
+
+      <div class="card__divider"></div>
+
+      <button type="submit" aria-label="button that generates a random advice!">
         <img src="images/icon-dice.svg" alt="dice icon as a submit button" />
       </button>
     </main>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
