Connect js file to html and variables for necessary html elements

--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -10,6 +10,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js" defer></script>
     <title>Frontend Mentor | Advice generator app</title>
   </head>
   <body>
