--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -25,8 +25,15 @@
 
       <div class="card__divider"></div>
 
-      <button type="submit" aria-label="button that generates a random advice!">
-        <img src="images/icon-dice.svg" alt="dice icon as a submit button" />
+      <button
+        aria-label="button that generates a random advice!"
+        class="card__btn"
+      >
+        <img
+          src="images/icon-dice.svg"
+          alt="dice icon as a submit button"
+          class="card__btn-img"
+        />
       </button>
     </main>
 
