Style advice text display and position, give card title an absolute position

--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -20,7 +20,9 @@
       <h5 class="card__title">advice #<span class="card__number"></span></h5>
 
       <blockquote class="card__advice">
-        "<span class="card__advice-generated"></span>"
+        "<span class="card__advice-generated"
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. </span
+        >"
       </blockquote>
 
       <div class="card__divider"></div>
@@ -46,16 +48,3 @@
     </div>
   </body>
 </html>
-
-<!-- 
-  Advice #
-
-  ""
-
-  <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
- -->
