--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -10,6 +10,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/script.js" defer></script>
     <title>Frontend Mentor | Advice generator app</title>
   </head>
@@ -17,11 +18,15 @@
     <h1 class="sr-only">Advice</h1>
 
     <main class="card">
-      <h5 class="card__title">advice #<span class="card__number"></span></h5>
+      <h5 class="card__title">
+        advice #<span class="card__number">
+          <!-- placeholder: ADVICE # -->
+        </span>
+      </h5>
 
       <blockquote class="card__advice">
-        "<span class="card__advice-generated"
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. </span
+        "<span class="card__advice-generated">
+          <!-- placeholder: ADVICE --> </span
         >"
       </blockquote>
 
