Add function to button so it generates a new advice and replace quotation marks

--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -18,16 +18,10 @@
     <h1 class="sr-only">Advice</h1>
 
     <main class="card">
-      <h5 class="card__title">
-        advice #<span class="card__number">
-          <!-- placeholder: ADVICE # -->
-        </span>
-      </h5>
+      <h5 class="card__title">advice #<span class="card__number"> </span></h5>
 
       <blockquote class="card__advice">
-        "<span class="card__advice-generated">
-          <!-- placeholder: ADVICE --> </span
-        >"
+        “<span class="card__advice-generated"> </span>”
       </blockquote>
 
       <div class="card__divider"></div>
