--- a/Junior/advice-generator-app-main/index.html
+++ b/Junior/advice-generator-app-main/index.html
@@ -18,7 +18,7 @@
     <h1 class="sr-only">Advice</h1>
 
     <main class="card">
-      <h5 class="card__title">advice #<span class="card__number"> </span></h5>
+      <h2 class="card__title">advice #<span class="card__number"> </span></h2>
 
       <blockquote class="card__advice">
         “<span class="card__advice-generated"> </span>”
@@ -38,12 +38,12 @@
       </button>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://github.com/neonita" target="_blank">Neonita</a>.
-    </div>
+    </footer>
   </body>
 </html>
